--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -49,9 +49,10 @@
     <Compile Include="Equipos\Info\InformacionComercial.cs" />
     <Compile Include="Equipos\Info\InformacionHardware.cs" />
     <Compile Include="Equipos\Info\Umdns.cs" />
+    <Compile Include="Mantenimiento\IEnumerable.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajoPrioridad.cs" />
     <Compile Include="Mantenimiento\Repuesto.cs" />
-    <Compile Include="Mantenimiento\SolicitudRepuesto.cs" />
+    <Compile Include="Mantenimiento\SolicitudRepuestoServicio.cs" />
     <Compile Include="Mantenimiento\GastoOrdenDeTrabajo.cs" />
     <Compile Include="Mantenimiento\MantenimientoTipo.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajoEstado.cs" />
