--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -49,14 +49,17 @@
     <Compile Include="Equipos\Info\InformacionComercial.cs" />
     <Compile Include="Equipos\Info\InformacionHardware.cs" />
     <Compile Include="Equipos\Info\Umdns.cs" />
+    <Compile Include="Mantenimiento\ChecklistMantenimientoPreventivo.cs" />
     <Compile Include="Mantenimiento\IEnumerable.cs" />
+    <Compile Include="Mantenimiento\OrdeDeTrabajoMantenimientoPreventivo.cs" />
+    <Compile Include="Mantenimiento\OrdenDeTrabajo.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajoPrioridad.cs" />
     <Compile Include="Mantenimiento\Repuesto.cs" />
     <Compile Include="Mantenimiento\SolicitudRepuestoServicio.cs" />
     <Compile Include="Mantenimiento\GastoOrdenDeTrabajo.cs" />
     <Compile Include="Mantenimiento\MantenimientoTipo.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajoEstado.cs" />
-    <Compile Include="Mantenimiento\OrdenDeTrabajo.cs" />
+    <Compile Include="Mantenimiento\OrdenDeTrabajoMantenimientoCorrectivo.cs" />
     <Compile Include="Equipos\Info\Fabricante.cs" />
     <Compile Include="Equipos\Info\Marca.cs" />
     <Compile Include="Equipos\Info\Modelo.cs" />
