--- a/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
+++ b/EquiposTecnicosSN.Web/EquiposTecnicosSN.Web.csproj
@@ -48,6 +48,10 @@
       <HintPath>..\packages\BeginCollectionItem.1.2.1.0\lib\net35\BeginCollectionItem.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DDay.iCal, Version=1.0.2.575, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DDay.iCal.1.0.2.575\lib\DDay.iCal.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Glimpse.Ado, Version=1.7.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Glimpse.Ado.1.7.3\lib\net45\Glimpse.Ado.dll</HintPath>
       <Private>True</Private>
@@ -233,6 +237,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ChecklistsMantenimientoPreventivoController.cs" />
     <Compile Include="Controllers\EquiposBaseController.cs" />
     <Compile Include="Controllers\EquiposClimatizacionController.cs" />
     <Compile Include="Controllers\FabricantesController.cs" />
@@ -243,19 +248,22 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MarcasController.cs" />
     <Compile Include="Controllers\ModelosController.cs" />
-    <Compile Include="Controllers\OrdenesDeTrabajoController.cs" />
+    <Compile Include="Controllers\ODTController.cs" />
+    <Compile Include="Controllers\ODTMantenimientoCorrectivoController.cs" />
+    <Compile Include="Controllers\ODTMantenimientoPreventivoController.cs" />
     <Compile Include="Controllers\OrdenesDeTrabajoController_old.cs" />
     <Compile Include="Controllers\ProveedoresController.cs" />
     <Compile Include="Controllers\RepuestosController.cs" />
     <Compile Include="Controllers\SolicitudesRepuestoServicioController.cs" />
     <Compile Include="Controllers\SolicitudesUsuariosController.cs" />
+    <Compile Include="Controllers\StockRepuestosController.cs" />
     <Compile Include="Controllers\TrasladosController.cs" />
     <Compile Include="Controllers\UbicacionesController.cs" />
     <Compile Include="CustomExtensions\EnumExtension.cs" />
     <Compile Include="DataContexts\EquiposDb.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201605222212473_InitialCreate.cs" />
-    <Compile Include="DataContexts\EquiposMigrations\201605222212473_InitialCreate.Designer.cs">
-      <DependentUpon>201605222212473_InitialCreate.cs</DependentUpon>
+    <Compile Include="DataContexts\EquiposMigrations\201606162301448_CreateInicial.cs" />
+    <Compile Include="DataContexts\EquiposMigrations\201606162301448_CreateInicial.Designer.cs">
+      <DependentUpon>201606162301448_CreateInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="DataContexts\EquiposMigrations\Configuration.cs" />
     <Compile Include="DataContexts\IdentityDb.cs" />
@@ -781,6 +789,8 @@
     <Content Include="Scripts\autocomplete.js" />
     <Content Include="Scripts\bootstrap-datepicker.js" />
     <Content Include="Scripts\bootstrap-datepicker.min.js" />
+    <Content Include="Scripts\bootstrap-filestyle.js" />
+    <Content Include="Scripts\bootstrap-filestyle.min.js" />
     <Content Include="Scripts\bootstrap-switch.js" />
     <Content Include="Scripts\bootstrap-switch.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -1108,6 +1118,7 @@
     <Content Include="lib\bower_components\raphael\bower.json" />
     <None Include="Properties\PublishProfiles\neuquen.pubxml" />
     <None Include="Scripts\jquery-2.2.2.intellisense.js" />
+    <Content Include="Scripts\close-solicitud.js" />
     <Content Include="Scripts\date-picker-ready.js" />
     <Content Include="Scripts\ddl-traslado.js" />
     <Content Include="Scripts\ddls-info-hardware.js" />
@@ -1193,6 +1204,7 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\sb-admin-2.js" />
     <Content Include="Scripts\start-home.js" />
+    <Content Include="Scripts\tooltips.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -1294,9 +1306,9 @@
     <Content Include="Views\InformacionHardware\Edit.cshtml" />
     <Content Include="Views\InformacionHardware\Index.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\InformacionHardware.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\OrdenDeTrabajo.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\OrdenDeTrabajoMantenimientoCorrectivo.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\InformacionHardware.cshtml" />
-    <Content Include="Views\Shared\EditorTemplates\Mantenimiento.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\ChecklistMantenimientoPreventivo.cshtml" />
     <Content Include="Views\Traslados\Create.cshtml" />
     <Content Include="Views\Traslados\Delete.cshtml" />
     <Content Include="Views\Traslados\Details.cshtml" />
@@ -1304,20 +1316,20 @@
     <Content Include="Views\Traslados\Index.cshtml" />
     <Content Include="Views\Shared\_TrasladosEquipoModal.cshtml" />
     <Content Include="Views\EquiposBase\ShowTraslados.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\Mantenimiento.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\ChecklistMantenimientoPreventivo.cshtml" />
     <Content Include="Views\Shared\_OrdenesDeTrabajo.cshtml" />
     <Content Include="Views\SolicitudesUsuarios\CreateUser.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Create.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Delete.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Details.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Edit.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\Index.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\CreateForEquipo.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\FillDiagnose.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\FillRepair.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\OrdenDeTrabajo.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\_AddGasto.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\OrderReplacementService.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Create.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Delete.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Details.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Edit.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Index.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\CreateForEquipo.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\FillDiagnose.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\Close.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\OrdenDeTrabajoMantenimientoCorrectivo.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\_AddGasto.cshtml" />
+    <Content Include="Views\SolicitudesRepuestoServicio\OrderReplacementService.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\SolicitudRepuestoServicio.cshtml" />
     <Content Include="Views\Repuestos\Create.cshtml" />
     <Content Include="Views\Repuestos\Delete.cshtml" />
@@ -1325,17 +1337,29 @@
     <Content Include="Views\Repuestos\Edit.cshtml" />
     <Content Include="Views\Repuestos\Index.cshtml" />
     <Content Include="Views\Shared\_EditGastos.cshtml" />
-    <Content Include="Views\OrdenesDeTrabajo\EditGastos.cshtml" />
+    <Content Include="Views\ODTMantenimientoCorrectivo\EditGastos.cshtml" />
     <Content Include="Views\Shared\_DetailSolicitudRepuestoServicioModal.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SolicitudRepuestoServicio.cshtml" />
     <Content Include="Views\Shared\_DetailSolicitudRepuestoServicioContent.cshtml" />
     <Content Include="Views\Shared\_ListSolicitudes.cshtml" />
     <Content Include="Views\Shared\_ListGastos.cshtml" />
+    <Content Include="Views\StockRepuestos\Index.cshtml" />
+    <Content Include="Views\ChecklistsMantenimientoPreventivo\Index.cshtml" />
+    <Content Include="Views\ChecklistsMantenimientoPreventivo\Create.cshtml" />
+    <Content Include="Views\ChecklistsMantenimientoPreventivo\Edit.cshtml" />
+    <Content Include="Views\ODTMantenimientoPreventivo\CreateForEquipo.cshtml" />
+    <Content Include="Views\ODTMantenimientoPreventivo\Details.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\OrdenDeTrabajoMantenimientoPreventivo.cshtml" />
+    <Content Include="Views\EquiposBase\Details.cshtml" />
+    <Content Include="Views\ODTMantenimientoPreventivo\EditGastos.cshtml" />
+    <Content Include="Views\Shared\_AddGasto.cshtml" />
+    <Content Include="Views\ODTMantenimientoPreventivo\Close.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\OrdenDeTrabajoMantenimientoPreventivo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Views\SolicitudesRepuestoServicio\" />
+    <Folder Include="Views\ODT\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -1351,8 +1375,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="DataContexts\EquiposMigrations\201605222212473_InitialCreate.resx">
-      <DependentUpon>201605222212473_InitialCreate.cs</DependentUpon>
+    <EmbeddedResource Include="DataContexts\EquiposMigrations\201606162301448_CreateInicial.resx">
+      <DependentUpon>201606162301448_CreateInicial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DataContexts\IdentityMigrations\201604272326154_CreateInicial.resx">
       <DependentUpon>201604272326154_CreateInicial.cs</DependentUpon>
