--- a/EquiposTecnicosSN.Web/packages.config
+++ b/EquiposTecnicosSN.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="BeginCollectionItem" version="1.2.1.0" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="Bootstrap.Datepicker" version="1.6.0" targetFramework="net452" />
+  <package id="DDay.iCal" version="1.0.2.575" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Glimpse" version="1.8.6" targetFramework="net452" />
   <package id="Glimpse.Ado" version="1.7.3" targetFramework="net452" />
