--- a/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
+++ b/EquiposTecnicosSN.Entities/EquiposTecnicosSN.Entities.csproj
@@ -50,10 +50,10 @@
     <Compile Include="Equipos\Info\InformacionHardware.cs" />
     <Compile Include="Equipos\Info\Umdns.cs" />
     <Compile Include="Mantenimiento\ChecklistMantenimientoPreventivo.cs" />
-    <Compile Include="Mantenimiento\IEnumerable.cs" />
     <Compile Include="Mantenimiento\OrdeDeTrabajoMantenimientoPreventivo.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajo.cs" />
     <Compile Include="Mantenimiento\OrdenDeTrabajoPrioridad.cs" />
+    <Compile Include="Mantenimiento\ProveedorTipo.cs" />
     <Compile Include="Mantenimiento\Repuesto.cs" />
     <Compile Include="Mantenimiento\SolicitudRepuestoServicio.cs" />
     <Compile Include="Mantenimiento\GastoOrdenDeTrabajo.cs" />
