--- a/EquiposTecnicosSN.Web/Web.config
+++ b/EquiposTecnicosSN.Web/Web.config
@@ -23,7 +23,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
-    <httpRuntime targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" maxRequestLength="2097151"/>
     <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
